# mojiokoshi

./: .gitignore  README.md  main.py  main.spec  pyproject.toml
src/: gui.py  kaigyou.py  kaigyou_en.py  mojiokoshi.py  replace_kaigyou.py
