[project]
name = "mojiokoshi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fugashi>=1.5.1",
    "ipadic>=1.0.0",
    "librosa>=0.11.0",
    "numpy>=2.3.3",
    "openai>=2.2.0",
    "openai-whisper>=20250625",
    "pydub>=0.25.1",
    "pyinstaller>=6.16.0",
    "scipy>=1.16.2",
    "soundcard>=0.4.5",
    "sounddevice>=0.5.2",
    "transformers>=4.57.0",
]
